# ADSR_envelope_synth

./: CMakeLists.txt  README.md
doc/: Class Diagram.drawio  README.md  REFLECTIE.md  class_diagram.drawio
src/: adsr.h  clock.cpp  clock.h  envelope.cpp  envelope.h  generator.cpp  generator.h  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h  synthesizer.cpp  synthesizer.h  voice.cpp  voice.h
src/port_audio/: audioModuleAdapter.cpp  audioModuleAdapter.h  port_audio.h
